--- a/META.yml
+++ b/META.yml
@@ -19,7 +19,7 @@ name: Module-Build-Database
 provides:
   Module::Build::Database:
     file: lib/Module/Build/Database.pm
-    version: 0.48
+    version: 0.49
   Module::Build::Database::Helpers:
     file: lib/Module/Build/Database/Helpers.pm
     version: 0
@@ -38,10 +38,11 @@ provides:
 requires:
   Digest::MD5: 0
   File::Copy::Recursive: 0
+  File::ShareDir: 0
   File::Which: 0
   List::MoreUtils: 0
   Sub::Exporter: 0
   blib: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.48
+version: 0.49
